<resources>
    <string name="app_name">DnD</string>
    <string name="mainTitle"><![CDATA[Dungeons & Dragons 5th Edition Mobile Character Sheet]]></string>
    <string name="createCharButton">Create a character</string>
    <string name="viewCharSheetButton">view character sheets</string>
    <string name="importCharButton">Import character sheet</string>
    <string name="exportCharButton">Export character sheet to pdf</string>
    <string name="create_a_character">Create a character</string>
    <string name="dieRollerButton">roll some dice</string>
    <string name="dice_roller_main_title">Die Roller</string>
    <string name="charactername">CharacterName</string>
    <string name="classlevel">ClassLevel</string>
    <string name="Race">Race</string>
    <string name="Background">Background</string>
    <string name="ArmorClass">Armor Class</string>
    <string name="InitiativeText">Initiative</string>
    <string name="Speed">Speed</string>
    <string name="character_statistics">character statistics</string>
    <string name="combat">combat</string>
    <string name="spells">spells</string>
    <string name="inventory">inventory</string>
    <string name="personal_information">Personal information</string>
    <string name="test_here_button">Here would be a list of characters</string>
    <string name="character_sheets">Character Sheets:</string>
    <string name="create_character_title">Create a character</string>
    <string name="proficiency_bonus">Proficiency Bonus</string>
    <string name="strength_text">STRENGTH</string>
    <string name="charname_stats_title">[CharName] statistics</string>
    <string name="dexterity_main_text">DEXTERITY</string>
    <string name="constitution_main_text">CONSTITUTION</string>
    <string name="intelligence_main_text">INTELLIGENCE</string>
    <string name="wisdom_main_text">WISDOM</string>
    <string name="charisma_main_text">CHARISMA</string>
    <string name="athletics_text">Athletics</string>
    <string name="acrobatics_text">Acrobatics</string>
    <string name="stealth_text">Stealth</string>
    <string name="sleight_text">Sleight of hand</string>
    <string name="str_saving_throws">Saving Throws</string>
    <string name="dex_saving_throws">Saving Throws</string>
    <string name="con_saving_throws">Saving Throws</string>
    <string name="history_text">History</string>
    <string name="nature">Nature</string>
    <string name="arcana">Arcana</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="intimidation">Intimidation</string>
    <string name="persuasion">Persuasion</string>
    <string name="perception">Perception</string>
    <string name="insight">Insight</string>
    <string name="deception">Deception</string>
    <string name="performance">Performance</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="medicine">Medicine</string>
    <string name="survival">Survival</string>
    <string name="wis_saving_throws">Saving Throws</string>
    <string name="int_saving_throws">Saving Throws</string>
    <string name="religion">Religion</string>
    <string name="investigation">Investigation</string>
    <string name="roll_dice_text">roll dice!</string>
    <string name="sampleChar">Char Name Here</string>
    <string name="roll_some_dice">Roll some dice</string>
    <string name="roll_dice">roll dice</string>
</resources>
