<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575757"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="Dungeons &amp; Dragons 5th Edition Mobile Character Sheet"
        android:textColor="#74F6D1"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/viewCharButton"
        android:layout_width="287dp"
        android:layout_height="74dp"
        android:background="#979797"
        android:onClick="launchViewChars"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/viewCharSheetButton"
        android:textColor="#74F6D1"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/importCharButton"
        android:layout_width="287dp"
        android:layout_height="74dp"
        android:background="#979797"
        android:onClick="launchImportChar"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/importCharButton"
        android:textColor="#74F6D1"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCharButton"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/exportCharButton"
        android:layout_width="287dp"
        android:layout_height="74dp"
        android:background="#979797"
        android:onClick="launchExportChar"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/exportCharButton"
        android:textColor="#74F6D1"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importCharButton"
        app:layout_constraintVertical_bias="0.474" />

    <Button
        android:id="@+id/diceRollerButton"
        android:layout_width="287dp"
        android:layout_height="74dp"
        android:background="#353B83"
        android:onClick="launchViewChars"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/roll_some_dice"
        android:textColor="#74F6D1"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/viewCharButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.302" />
</androidx.constraintlayout.widget.ConstraintLayout>