<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#575757"
    tools:context=".SelectedCharacterViewActivity">

    <Button
        android:id="@+id/dieRollerButton"
        android:layout_width="98dp"
        android:layout_height="45dp"
        android:background="#2F647C"
        android:onClick="launchDieRoller"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="roll dice"
        android:textColor="#8EE8CE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedCharacterName"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#74F6D1"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/charactername"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/armorClassText"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/ArmorClass"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/armorClassText2"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/ArmorClass"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/initiativeText"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/InitiativeText"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/armorClassText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/Speed"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/Speed"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toEndOf="@+id/initiativeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <EditText
        android:id="@+id/armorClassValue"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:background="#E0FFF8"
        android:ems="10"
        android:gravity="clip_horizontal|center_horizontal|center_vertical"
        android:inputType="number"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/armorClassText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/initiativeValue"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:background="#E0FFF8"
        android:ems="10"
        android:inputType="number"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/armorClassValue"
        app:layout_constraintTop_toBottomOf="@+id/initiativeText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/speedValue"
        android:layout_width="77dp"
        android:layout_height="30dp"
        android:layout_marginBottom="184dp"
        android:background="#E0FFF8"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="3"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="@+id/selectedCharacterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toEndOf="@+id/initiativeValue"
        app:layout_constraintTop_toBottomOf="@+id/Speed"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedCharacterName">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>